# aoc2025

./: LICENSE  Makefile  README.md  mise.toml  pyproject.toml
.github/workflows/: tests.yml
src/aoc2025/: day01.py  day02.py  day03.py
tests/: conftest.py  test_day01.py  test_day02.py  test_day03.py
