[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aoc2025"
version = "0.1.0"
description = "Advent of Code 2025 solutions in Python"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Jacob Lorenzen", email = "jacob@lorenzen.me" },
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/Jaxwood/aoc2025"
Repository = "https://github.com/Jaxwood/aoc2025.git"
Issues = "https://github.com/Jaxwood/aoc2025/issues"
